# DL API
#
# Copyright (c) 2018-2020 Jeron Aldaron Lau
# 
# Licensed under the Apache License, Version 2.0, <LICENSE-APACHE or
# https://apache.org/licenses/LICENSE-2.0>, or the Zlib License, <LICENSE-ZLIB
# or http://opensource.org/licenses/Zlib>, at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "dl_api"
version = "0.4.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
license = "Apache-2.0 OR Zlib"

description = "The easiest, simplest and safest way to load dynamic (shared object) libraries from Rust!"
repository = "https://github.com/AldaronLau/dl_api"
documentation = "https://docs.rs/dl_api"
homepage = "https://github.com/AldaronLau/dl_api/blob/master/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
categories = ["api-bindings", "external-ffi-bindings", "os::unix-apis", "os::windows-apis"]
keywords = ["dlopen", "dll", "so", "dylib", "shared"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "AldaronLau/dl_api" }
is-it-maintained-issue-resolution = { repository = "AldaronLau/dl_api" }
is-it-maintained-open-issues = { repository = "AldaronLau/dl_api" }
maintenance = { status = "actively-developed" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "winerror", "minwindef", "errhandlingapi"] }

[build-dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[features]
default = []
docs-rs = []
